--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@elysiajs/swagger": "^1.3.1",
+    "elysia": "^1.4.21",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
